more fixes and formatting diff --git a/src/js/controllers/changelly.js b/src/js/controllers/changelly.js index 50c1175dd..fb966feb8 100644 --- a/src/js/controllers/changelly.js +++ b/src/js/controllers/changelly.js @@ -15,6 +15,7 @@ angular.module('copayApp.controllers').controller('changellyController',      $scope.homeTip = $stateParams.fromOnboarding;      $scope.isCordova = platformInfo.isCordova;      $scope.isAndroid = platformInfo.isAndroid; +    $scope.isIOS = platformInfo.isIOS;      $scope.isWindowsPhoneApp = platformInfo.isCordova && platformInfo.isWP;      $scope.isNW = platformInfo.isNW;      $scope.showRateCard = {}; diff --git a/src/sass/views/changelly.scss b/src/sass/views/changelly.scss index 9684de12d..07d788a48 100644 --- a/src/sass/views/changelly.scss +++ b/src/sass/views/changelly.scss @@ -289,36 +289,22 @@        }      }    } -  .changelly { +  .mobile-only {      background: #fff;      overflow: auto;      height: 100%; -    &-info { -      padding-top: 20px; -      padding-bottom: 15px; -      text-align: center; -      .changelly-label { -        margin-top: 5%; -        font-size: 13px; -      } +    text-align: center; +    .text { +      margin-top: 5%; +      margin-bottom: 3%; +      font-size: 12px;      } -    .status-label { -      font-size: 14px; -      font-weight: 300; -      color: #727272; -      padding: 1rem; -      background: #f8f8f9; -      i { -        position: absolute; -        padding-left: 5px; -      } +    .link { +      padding-left: 5px; +      padding-right: 5px;      }    }
- .changelly-padding {
-    padding: 10px;
-    padding-top: 30px;
-  }
   .backup {
     position: absolute;
     top: 0;
diff --git a/www/views/changelly.html b/www/views/changelly.html
index 40ff67350..61f66ef14 100644
--- a/www/views/changelly.html
+++ b/www/views/changelly.html
@@ -25,8 +25,9 @@
         <div class="list card padding text-center" ng-if="!wallets[0]">
           <span translate>No Wallet</span>
         </div>
-

--- a/src/sass/views/changelly.scss
+++ b/src/sass/views/changelly.scss
@@ -289,36 +289,22 @@
       }
     }
   }
-  .changelly {
+  .mobile-only {
     background: #fff;
     overflow: auto;
     height: 100%;
-    &-info {
-      padding-top: 20px;
-      padding-bottom: 15px;
-      text-align: center;
-      .changelly-label {
-        margin-top: 5%;
-        font-size: 13px;
-      }
+    text-align: center;
+    .text {
+      margin-top: 5%;
+      margin-bottom: 3%;
+      font-size: 12px;
     }
-    .status-label {
-      font-size: 14px;
-      font-weight: 300;
-      color: #727272;
-      padding: 1rem;
-      background: #f8f8f9;
-      i {
-        position: absolute;
-        padding-left: 5px;
-      }
+    .link {
+      padding-left: 5px;
+      padding-right: 5px;
     }
   }
 
- .changelly-padding {
-    padding: 10px;
-    padding-top: 30px;
-  }
   .backup {
     position: absolute;
     top: 0;
